
Version 0.1.12
--------------
- add support for reading meshes in GEO format
- add support for reading meshes in TRI format (also known as ICO mesh format)
- add support for reading meshes in OFF format, the Object File Format
- add support for reading meshes in OBJ format, the Wavefront object format
- add support for writing FreeSurfer patch files in the ASCII format version
- add many unit tests and test files


Version 0.1.11
--------------
- export readable.files function
- support reading and writing meshes in mz3 format
- support writing PLY2 ASCII mesh format
- support reading mesh in BYU format
- support automatic conversion of quadrangular BYU meshes to triangular upon import
- add support for reading GIFTI format labels
- add support for reading GIFTI format annotations
- add support for writing GIFTI format labels
- add support for writing GIFTI format annotations
- export rotate2D and flip2D to namespace
- add support for reading transformation matrices from xfm files: read.fs.transform
- rename all optional data functions: replace optional_data with opt_data in function names to prevent clash with fsbrain names


Version 0.1.10
--------------
- read.fs.label improvement: do not increment indices for volume labels, better print support for them
- support exporting surface meshes in Stanford triangle format (.ply)
- support reading surface meshes in Stanford triangle format (.ply)
- support exporting surface meshes in Wavefront object format (.obj)
- support exporting surface meshes in Object File Format (.off)
- support reading surface meshes in PLY format, including Blender exports with vertex colors and normals
- add general GIFTI writer (requires xml2)
- add support for writing surfaces in GIFTI format
- add read.fs.volume() function that support MGH, MGZ and NIFTI formats
- add experimental support for reading NIFTI volumes as fs.volume instances (via oro.nifti package), including header computation


Version 0.1.9
-------------