@@ -80,6 +80,8 @@ export(read_nisurfacefile)
 export(readable.files)
 export(rotate2D)
 export(rotate3D)
+export(sm0to1)
+export(sm1to0)
 export(write.fs.annot)
 export(write.fs.annot.gii)
 export(write.fs.colortable)
