@@ -386,6 +386,7 @@ mghheader <- function(dims, mri_dtype_code) {
   }
 
   dtype_name = translate.mri.dtype(mri_dtype_code); # The function is (ab)used to check the passed value, the return value is not used.
+  dtype_name = NULL; # avoid IDE warnings about unused var.
 
   header = list();
   header$internal = list();
@@ -510,3 +511,32 @@ mghheader.centervoxelRAS.from.firstvoxelRAS <- function(header, first_voxel_RAS)
   center_voxel_RAS = incomplete_vox2ras %*% center_voxel_CRS;
   return(center_voxel_RAS[1:3]);
 }
+
+
+#' @title Adapt spatial transformation matrix for 1-based indices.
+#'
+#' @param tf_matrix 4x4 numerical matrix, the input spatial transformation matrix, suitable for 0-based indices. Typically this is a vox2ras matrix obtained from functions like \code{\link{mghheader.vox2ras}}.
+#'
+#' @return 4x4 numerical matrix, adapted spatial transformation matrix, suitable for 1-based indices.
+#'
+#' @export
+sm0to1 <- function(tf_matrix) {
+  q = matrix(rep(0, 16L), ncol = 4L);
+  q[1:3,4] = 1;
+  return(solve(solve(tf_matrix + q)));
+}
+
+
+#' @title Adapt spatial transformation matrix for 0-based indices.
+#'
+#' @param tf_matrix 4x4 numerical matrix, the input spatial transformation matrix, suitable for 1-based indices.
+#'
+#' @return 4x4 numerical matrix, adapted spatial transformation matrix, suitable for 0-based indices.
+#'
+#' @export
+sm1to0 <- function(tf_matrix) {
+  q = matrix(rep(0, 16L), ncol = 4L);
+  q[1:3,4] = -1;
+  return(solve(solve(tf_matrix + q)));
+}
+
