@@ -8,7 +8,9 @@ Version 0.1.12
 - add support for reading meshes in OFF format, the Object File Format
 - add support for reading meshes in OBJ format, the Wavefront object format
 - add support for writing FreeSurfer patch files in the ASCII format version
-- add many unit tests and test files
+- add many unit tests and test files, use covr
+- deprecate (imo) useless parameter 'empty_label_name' to read.fs.annot. using it will show a deprecation notice. (Please open issue if you feel you need it.)
+
 
 
 Version 0.1.11
